# ssf

./: .gitignore  .gitmodules  CMakeLists.txt
data/shaders/: builtin_geometrypass.meta.yaml  builtin_shadow_pass.meta.yaml  builtin_shadow_pass.pixel.glsl  builtin_shadow_pass.vert.glsl  builtin_skybox.pixel.glsl  builtin_skybox.vert.glsl  object.pixel.glsl  object.vert.glsl
include/juye/: juye.h
include/juye/gk/: prefabs.h  primitives.h
include/ssf/: ssf.h
scripts/: env.sh  shader.py
src/core/: debug.h  device.cpp  device.h  global.h  ssf.cpp
src/core/configuration/: build_generation.h.in
src/core/drivers/: device.cpp
src/core/drivers/VK/: vk_core.cpp  vk_core.h  vk_helper.cpp  vkdefines.h  vkinternal.cpp  vkinternal.h  vkresource.cpp  vkresource.h  vkshader.cpp
src/core/fsystem/: file.h  image.cpp
src/core/gpu/VK/: vk_core.cpp  vk_core.h  vk_debug.h  vk_defines.h  vk_helper.cpp  vk_helper.h  vk_internal.cpp  vk_internal.h  vk_wrappers.cpp  vk_wrappers.h
src/core/gpu/VK/MemoryVK/: MemoryVK.cpp  MemoryVK.h  readme.md
src/core/gpu/VK/shader/: shader_core.cpp  shader_core.h  types.h
src/gfx/: gfx.cpp  gfx.h  prefabs.h
src/gk/: actions.cpp  actions.h  gk.cpp  gk.h  prefabs.cpp
src/gk/assets/: loader.cpp  loader.h  registry.cpp  registry.h
